fix(clear-filter-btn): add margin top to align items

--- a/src/App.css
+++ b/src/App.css
@@ -216,6 +216,7 @@ body,html {
   margin-left: 10px;
   color: #F47174;
   font-weight: 700;
+  margin-top: 5px;
 }
 
 .clear-filter:hover {
